screens-72, fix the issue :'Calendar is broken on Safari'

--- a/frontend/src/components/calendar/Calendar.css
+++ b/frontend/src/components/calendar/Calendar.css
@@ -1,15 +1,13 @@
-.rbc-timeslot-group {
-    min-height: 21px;
-}
 .calendar-content{
     width: 100%;
+    height: 100%;
+    display: -webkit-flex;
+    display: flex;
+    flex-direction: column;
 }
 .rbc-event-label{
     display: none;
 }
-.calendar-name{
-    height: 1vh;
-}
-.rbc-calendar{
-    height: 96.5vh;
+.rbc-time-content{
+    align-items: stretch;
 }
